# BVCBM

./: CMakeLists.txt  README.md  pyproject.toml  requirements.txt
TumourModel/binding/: bvcbm_module.cpp
TumourModel/include/tumour_model/: Model.hpp  Pancreas.hpp  Params.hpp
TumourModel/src/: Model.cpp
python/bvcbm/: __init__.py
