[build-system]
requires = [
    "scikit-build-core>=0.5",
    "pybind11>=2.11",
]
build-backend = "scikit_build_core.build"

[project]
name = "bvcbm"
version = "0.1.0"
description = "Python bindings for the BVCBM tumour growth model"
readme = "README.md"
authors = [
    { name = "Calibration_BVCBM Maintainers" }
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://example.com/bvcbm"

[tool.scikit-build]
wheel.packages = ["python/bvcbm"]

[tool.scikit-build.cmake]
minimum-version = "3.18"
build-type = "Release"

[tool.scikit-build.build]
cmake = ["-DBVCBM_BUILD_PYTHON=ON"]